--- a/strings.Rmd
+++ b/strings.Rmd
@@ -751,7 +751,7 @@ sentences %>%
 
 1.   Replace all forward slashes in a string with backslashes.
 
-1.   Implement a simple version of `str_to_lower()` using `replace_all()`.
+1.   Implement a simple version of `str_to_lower()` using `str_replace_all()`.
 
 1.   Switch the first and last letters in `words`. Which of those strings
      are still words?
